# KateNailBot

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml  static.py
alembic/: env.py
alembic/versions/: 2025_06_02_1928-06dab5d20d8c_create_table_user.py  2025_06_04_0940-57cabbda64af_add_autoincrement_true_for_base_id.py  2025_06_09_1007-04489ea7c838_creating_table_user.py  2025_06_11_0912-ed35d43e9e61_change_columns_in_table_users.py  2025_07_01_1754-e620193cd1a9_добавлена_таблица_schedules.py  2025_07_22_1417-23c133c5b8d9_add_field_is_approved_in_table_schedules.py  2025_07_22_1547-9370fa5a3d4c_create_id_sequence.py  2025_07_24_0901-9552f87ce588_creating_table_schedule_settings.py  2025_07_25_1309-aa836b83b09c_create_table_days_off.py
database/: config.py  database.py
keyboards/: admin.py  book.py  calendar.py  change_schedule.py  start.py
routers/: __init__.py  admin_handlers.py  callbacks.py
routers/callbacks/: __init__.py  admin.py  booking.py
routers/commands/: __init__.py  admin.py  base.py  base_commands.py
src/: config.py  exceptions.py  main.py  static.py
src/dao/: base.py  user.py
src/exceptions/: __init__.py  booking.py  callback.py  registration.py  telegram_object.py  token.py
src/keyboards/: admin.py  book.py  calendar.py  change_schedule.py  start.py
src/middlewares/: admin_service.py  db.py  db_middleware.py  error_handler.py  schedule_service.py  schedule_settings.py  user_service.py
src/models/: __init__.py  base.py  day_off.py  schedule.py  schedule_settings.py  user.py
src/routers/: __init__.py
src/routers/callbacks/: __init__.py  admin.py  book.py  booking.py  start.py
src/routers/commands/: __init__.py  admin.py  base.py  book.py  cancel.py  info.py  start.py
src/routers/handlers/: __init__.py  admin.py  book.py  start.py
src/schemas/: user.py
src/service/: user.py
src/services/: admin.py  base.py  schedule.py  user.py
src/states/: broadcast_message.py  cancel_booking.py  change_info.py  choose_visit_datetime.py  days.py  days_off.py  registration.py  working_time.py
src/texts/: info_text.py  info_text.txt  status_appointments.py
src/utils/: callback_validators.py  check_is_admin.py  get_admins_ids.py  register_middlewares.py
tests/: conftest.py
tests/integration_tests/: conftest.py
tests/integration_tests/dao/: test_user_dao.py
tests/integration_tests/services/: test_admin_service.py  test_schedule_service.py  test_user_service.py
tests/unit_tests/: test_commands.py  test_keyboards.py
tests/unit_tests/dao/: conftest.py  test_user_dao.py
tests/unit_tests/keyboards/: test_keyboards.py
tests/unit_tests/registration/: conftest.py  test_register_user.py
tests/unit_tests/services/: conftest.py  test_schedule_service.py
tests/unit_tests/utils/: test_check_is_admin.py  test_register_middlewares.py
